# SDS-AX-Advanced-2026-1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  pyproject.toml
.claude/: settings.json
Day-01/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
Day-01/00-Template/: Sample-Template.ipynb
Day-01/01-QuickStart/: 01-QuickStart-LangGraph-Tutorial.ipynb  02-QuickStart-LangGraph-Graph-API.ipynb  03-QuickStart-LangGraph-Ollama.ipynb  README.md
Day-01/02-Basic/: 01-LangGraph-Models.ipynb  02-LangGraph-Messages.ipynb  03-LangGraph-Building-Graphs.ipynb  README.md
Day-01/03-Agent/: 01-LangGraph-Agents.ipynb  02-LangGraph-Tools.ipynb  03-LangGraph-Streaming.ipynb  04-LangGraph-Runtime.ipynb  05-LangGraph-Structured-Output.ipynb
Day-01/04-Middleware/: 01-LangGraph-Middleware.ipynb  02-LangGraph-Human-In-The-Loop.ipynb  03-LangGraph-Context-Engineering.ipynb  04-LangGraph-Guardrail.ipynb
Day-01/04-Middleware/assets/: comprehensive_architecture.excalidraw  context_type.excalidraw  dynamic_prompt.excalidraw  middleware-flow.excalidraw  model_context.excalidraw  tool_context.excalidraw  tool_filtering.excalidraw
Day-01/05-Memory/: 01-LangGraph-Add-Memory.ipynb  02-LangGraph-Memory-Postgres.ipynb
Day-01/05-Memory/assets/: 01-chatbot-graph.excalidraw  03-auto-delete-graph.excalidraw  03-basic-agent-graph.excalidraw  03-summary-graph.excalidraw
Day-01/06-MCP/: 01-LangGraph-MCP-Tutorial.ipynb
Day-01/06-MCP/assets/: 01-mcp-workflow-graph.excalidraw
Day-01/06-MCP/server/: mcp_rag_server.py  mcp_server_local.py  mcp_server_rag.py  mcp_server_remote.py
Day-01/06-MCP/server/rag/: base.py  pdf.py
Day-01/07-Supervisor/: 01-LangGraph-Supervisor.ipynb  02-LangGraph-Multi-Agent-Collaboration.ipynb  03-LangGraph-Multi-Agent-Supervisor.ipynb  04-LangGraph-Hierarchial-Agent-Team.ipynb
Day-01/07-Supervisor/assets/: langgraph-multi-agent-team-supervisor.excalidraw  supervisor-pattern-architecture.excalidraw
Day-01/08-Core-Features/: 01-LangGraph-Introduction.ipynb  02-LangGraph-ChatBot.ipynb  03-LangGraph-Agent.ipynb  04-LangGraph-Agent-With-Memory.ipynb  05-LangGraph-Streaming-Outputs.ipynb  06-LangGraph-Human-In-the-Loop.ipynb  07-LangGraph-Manual-State-Update.ipynb  08-LangGraph-State-Customization.ipynb  09-LangGraph-DeleteMessages.ipynb  10-LangGraph-ToolNode.ipynb  11-LangGraph-Branching.ipynb  12-LangGraph-Add-Conversation-Summary.ipynb  13-LangGraph-Subgraph.ipynb  14-LangGraph-Subgraph-Transform-State.ipynb  15-LangGraph-Streaming-Steps.ipynb
Day-01/08-Core-Features/assets/: 03-agent-graph.excalidraw  04-agent-memory-graph.excalidraw  06-human-in-the-loop-graph.excalidraw  12-conversation-summary-graph.excalidraw  15-streaming-graph.excalidraw  15-streaming-subgraph.excalidraw  chatbot-graph.excalidraw  interrupt-flow.excalidraw  stream-mode-comparison.excalidraw
Day-01/09-RAG/: 01-LangGraph-Building-Graphs.ipynb  02-LangGraph-Naive-RAG.ipynb  03-LangGraph-Add-Groundedness-Check.ipynb  04-LangGraph-Add-Web-Search.ipynb  05-LangGraph-Add-Query-Rewrite.ipynb  06-LangGraph-Agentic-RAG.ipynb  07-LangGraph-CRAG.ipynb  08-LangGraph-Self-RAG.ipynb  09-LangGraph-Adaptive-RAG.ipynb  10-LangGraph-Retrieval.ipynb
Day-01/09-RAG/assets/: 08-self-rag-graph.excalidraw
Day-01/09-RAG/rag/: base.py
Day-01/10-Use-Cases/: 01-LangGraph-Agent-Simulation.ipynb  02-LangGraph-Prompt-Generation.ipynb  03-LangGraph-Plan-and-Execute.ipynb  04-LangGraph-SQL-Agent.ipynb  05-LangGraph-Research-Assistant.ipynb
Day-01/10-Use-Cases/assets/: 02-prompt-generation-graph.excalidraw  agent-simulations.excalidraw  langgraph-plan-and-execute.excalidraw  meta-prompt-generator.excalidraw
Day-01/10-Use-Cases/rag/: base.py  pdf.py
Day-01/12-GraphRAG/: 01-LangGraph-Text2Cypher-Neo4j.ipynb
Day-01/12-GraphRAG/assets/: text2cypher-flow.excalidraw
Day-01/13-Deployment/: Agent-Chat-UI-OSS.ipynb  agent.py  langgraph.json
Day-01/13-Deployment/assets/: agent-chat-ui-architecture.excalidraw
Day-02/: .env.example  01_01_preprocessing_load_parse.ipynb  01_02_preprocessing_chunking.ipynb  (+15 more)
Day-03/: .gitignore  (+13 more)
Day-05/.claude/skills/langchain-langgraph-best-practices/assets/03-langgraph/project-setup/templates/: .env.example  pyproject.toml
Day-05/project/: .env.example  README.md  docker-compose.langfuse.yaml  mypy.ini  pyproject.toml
Day-05/project/data/golden/: golden_dataset.json
Day-05/project/data/synthetic/: synthetic_dataset.json
Day-05/project/eval/: AGENTS.md  test_agent_eval.py
Day-05/project/scripts/: 01_generate_synthetic.py  02_export_for_review.py  03_import_reviewed.py  04_build_golden.py  05_run_eval.py  06_batch_eval_langfuse.py  AGENTS.md  demo_full_loop.py  run_golden_openai.py  run_pipeline.py
Day-05/project/src/: my_agent.py  settings.py
Day-05/project/src/llm/: __init__.py  deepeval_model.py  json_utils.py  openrouter.py
Day-05/project/src/loop1_dataset/: AGENTS.md  csv_importer.py  expected_tools_augmenter.py  feedback_augmenter.py  golden_builder.py  prompts.py  synthesizer.py  validator.py
Day-05/project/src/loop2_evaluation/: AGENTS.md  agent_metrics.py  agent_runner.py  batch_evaluator.py  langfuse_bridge.py  metrics_registry.py  prompt_optimizer.py  prompts.py  rag_metrics.py
Day-05/project/tests/: AGENTS.md  test_agent_runner.py  test_calibration_cases.py  test_expected_tools_augmenter.py  test_golden_builder.py  test_golden_sampling.py  test_loop1_synthesizer_generation.py  test_openrouter_model.py  test_prompt_optimizer.py  test_remediation_agent.py  test_synthesizer.py
(+593 files in other folders)
