[project]
name = "langgraph-v1-tutorial"
version = "0.2.0"
description = "Ultimate LangGraph Tutorial written in Korean"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain Core
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    # LangChain Integrations
    "langchain-anthropic>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-neo4j>=0.3.0,<0.8.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langchain-teddynote>=0.5.4",
    # LangGraph
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-redis>=0.4.0",
    "langgraph-cli[inmem]>=0.4.19",
    "langgraph-supervisor>=0.0.31",
    # Deep Agents
    "deepagents>=0.4.12",
    # MCP
    "mcp>=1.26.0",
    # Data Science & Visualization
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    # Database & Storage
    "faiss-cpu>=1.13.2",
    "neo4j>=6.1.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.3.3",
    # Document Processing
    "arxiv>=2.4.1",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.2",
    # Development Tools
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "python-dotenv>=1.2.2",
]
